WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74668
<ruby><div><p><rp> parses incorrectly
https://bugs.webkit.org/show_bug.cgi?id=74668
Summary
<ruby><div><p><rp> parses incorrectly
Adam Barth
Reported
2011-12-15 17:04:40 PST
<ruby><div><p><rp> parses incorrectly
Attachments
Patch
(7.69 KB, patch)
2011-12-15 17:06 PST
,
Adam Barth
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-12-15 17:06:54 PST
Created
attachment 119523
[details]
Patch
Adam Barth
Comment 2
2011-12-15 17:19:50 PST
Committed
r103005
: <
http://trac.webkit.org/changeset/103005
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug