<ruby><div><p><rp> parses incorrectly https://bugs.webkit.org/show_bug.cgi?id=74668

Reviewed by Darin Adler.

Source/WebCore:

This patch updates our implementation to match a change to the HTML5
specification regarding how <ruby> elements parse.  Previously, <rp>
and similar tags used to pop the stack up to the <ruby> element.  Now
the popping does not occur.

Tests: html5lib/runner.html

* html/parser/HTMLTreeBuilder.cpp:

LayoutTests:

Update test results to show progression.

* html5lib/runner-expected.txt:
* platform/chromium/html5lib/runner-expected.txt:


Canonical link: https://commits.webkit.org/91369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103005 268f45cc-cd09-0410-ab3c-d52691b4dbfc